# playwright-python-starter

./: README.md  pyproject.toml
conf/: booking.ini  httpbin.ini  playwright_config.yaml
src/core/: playwright_config.py
src/core/api/: base_api_service.py  http_client.py  request_options.py  response.py
src/core/web/: base_web_page.py  ui_element.py
src/project/booking/utils/: booking_configs.py
src/project/booking/web/pages/: landing_page.py  search_results_page.py
src/project/booking/web/pages/widgets/: search_widget.py  top_header_widget.py
src/project/httpbin/api/services/: anything_service.py
src/project/httpbin/utils/: httpbin_configs.py
src/project/httpbin/utils/data/: anything_dto.py
src/project/httpbin/utils/data/generators/: anything_generator.py
tests/: conftest.py  test_health_check.py  test_hybrid_web_api.py
tests/booking/: conftest.py
tests/booking/web/: test_booking_locale_detection.py  test_booking_mobile_view.py  test_booking_search_appartments.py
tests/httpbin/: conftest.py
tests/httpbin/api/: test_anything_group.py
